Fixing handling of the ink modifier